--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" type="image/png" href="styles/fonts/bingo.png">
     <title>Bingo</title>
 </head>
 <body>
     <main id="container">
     </main>
     <footer> 
-        <button class="tombola">TÓMBOLA</button>
+        <button type="button" onclick="this.blur();" class="tombola">TÓMBOLA</button>
     </footer>
 
 <script src="js/jquery.js"></script>
